# project_euler

./: pyproject.toml
project_euler/complete/: prob_016.py
project_euler/root/: perfect_digital_invariant.py
