[tool.poetry]
name = "project-euler"
version = "0.1.0"
description = ""
authors = ["minhcccp <33189614+minhcccp@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "project_euler" }]

[tool.poetry.dependencies]
python = "^3.9"
beartype = { version = "^0.7.1", allow-prereleases = true }
codetiming = { version = "^1.3.0", allow-prereleases = true }

[tool.poetry.dev-dependencies]
black = { version = "^21.7-beta.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
